--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -7,7 +7,8 @@ applications:
     routes:
       - route: timesheets-pal-rs.cfapps.io
     path: Applications/TimesheetsServer/bin/Release/netcoreapp3.1/publish
-    env:
-      REGISTRATION_SERVER_ENDPOINT: https://registration-pal-rs.cfapps.io
+    # env:
+    #   REGISTRATION_SERVER_ENDPOINT: https://registration-pal-rs.cfapps.io
     services:
       - tracker-timesheets-database
+      - tracker-service-registry
