--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -7,7 +7,8 @@ applications:
     routes:
       - route: backlog-pal-rs.cfapps.io
     path: Applications/BacklogServer/bin/Release/netcoreapp3.1/publish
-    env:
-      REGISTRATION_SERVER_ENDPOINT: https://registration-pal-rs.cfapps.io
+    # env:
+    #   REGISTRATION_SERVER_ENDPOINT: https://registration-pal-rs.cfapps.io
     services:
       - tracker-backlog-database
+      - tracker-service-registry
