--- a/Applications/BacklogServer/appsettings.json
+++ b/Applications/BacklogServer/appsettings.json
@@ -16,6 +16,16 @@
         "shouldFetchRegistry": true
     }
  },
+
+ "hystrix": {
+  "command": {
+      "default": {
+          "circuitBreaker": {
+          "requestVolumeThreshold": 1
+          }
+      }
+  }
+},
 "REGISTRATION_SERVER_ENDPOINT": "http://registration-service/",
   "AllowedHosts": "*"
 }
