--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -13,3 +13,4 @@ applications:
       - tracker-allocations-database
       - tracker-service-registry
       - p-identity-tracker
+      - tracker-config-server
